tdf#121970 KDE5: Regenerate menu when it's set as submenu

Also add item bits change notification function
for SalMenu to properly convert regenerated menu items
to check or radiocheck items.

Change-Id: I61f16a771b484644bbefd9afaf2776232d38a2f9